Move to Java 10
Update Gradle to 4.9
Update Spotless to 3.13.0
Move to spotbugs from findbugs
Update JUnit to 5.2.0
Update checkstyle to 8.11
Disable UI tests on Windows due to a JavaFX bug